Adding POC inference pipeline structure

--- a/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -44,7 +44,7 @@
     "try:\n",
     "    spark_session = DatabricksSession.builder.getOrCreate()\n",
     "except Exception:\n",
-    "    logging.warning(\"Unable to create Spark session; are you in a Databricks runtime?\")\n",
+    "    logging.warning('Unable to create Spark session; are you in a Databricks runtime?')\n",
     "    spark_session = None\n",
     "\n",
     "# Databricks workspace identifier\n",
