--- a/poc-pipelines/tasks/sst_pdp_data_validation/data_validation_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_data_validation/data_validation_pipeline_task.ipynb
@@ -38,7 +38,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "data_validation_task",
+   "notebookName": "data_validation_pipeline_task",
    "widgets": {}
   },
   "language_info": {
