Adding toml file parameters for inference pipeline

--- a/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -15,6 +15,8 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\"\"\"\n",
     "This script prepares data for inference in the Student Success Tool (SST) pipeline.\n",
     "\n",
@@ -32,6 +34,7 @@
     "from databricks.sdk.runtime import dbutils\n",
     "\n",
     "from student_success_tool.analysis import pdp\n",
+    "from student_success_tool import configs\n",
     "\n",
     "# Disable mlflow autologging (due to Databricks issues during feature selection)\n",
     "mlflow.autolog(disable=True)\n",
@@ -78,13 +81,20 @@
     "    logging.warning(\"Spark session not initialized. Cannot read dataframes.\")\n",
     "    exit()  # Exit the script if the Spark session is not available.\n",
     "\n",
-    "# TODO Update to take these parameterts from the institution .toml file\n",
-    "# Default values for data processing parameters (This will take the values from .toml file)\n",
-    "min_passing_grade = pdp.constants.DEFAULT_MIN_PASSING_GRADE\n",
-    "min_num_credits_full_time = pdp.constants.DEFAULT_MIN_NUM_CREDITS_FULL_TIME\n",
-    "course_level_pattern = pdp.constants.DEFAULT_COURSE_LEVEL_PATTERN\n",
-    "key_course_subject_areas = None\n",
-    "key_course_ids = None\n",
+    "\n",
+    "# Reading the parameters from the institution's configuration file\n",
+    "cfg = configs.load_config(f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\", configs.PDPProjectConfigV2)\n",
+    "\n",
+    "# Read preprocessing features\n",
+    "min_passing_grade = cfg.preprocessing.features.min_passing_grade\n",
+    "min_num_credits_full_time = cfg.preprocessing.features.min_num_credits_full_time\n",
+    "course_level_pattern = cfg.preprocessing.features.course_level_pattern\n",
+    "key_course_subject_areas = cfg.preprocessing.features.key_course_subject_areas\n",
+    "key_course_ids = cfg.preprocessing.features.key_course_ids\n",
+    "\n",
+    "# Read preprocessing target params\n",
+    "min_num_credits_checkin = cfg.preprocessing.target.params['min_num_credits_checkin']\n",
+    "min_num_credits_target = cfg.preprocessing.target.params['min_num_credits_target']\n",
     "\n",
     "# Create student-term dataset\n",
     "df_student_terms = pdp.dataops.make_student_term_dataset(\n",
@@ -97,10 +107,7 @@
     "    key_course_ids=key_course_ids,\n",
     ")\n",
     "\n",
-    "# TODO  Update to take these parameterts from the institution .toml file\n",
-    "# Parameters for target variable calculation (This will take the values from .toml file)\n",
-    "min_num_credits_checkin = 1.0\n",
-    "min_num_credits_target = 1.0\n",
+    "\n",
     "student_criteria = {\n",
     "    \"enrollment_type\": [\"FIRST-TIME\", \"RE-ADMIT\", \"TRANSFER-IN\"],\n",
     "    # \"enrollment_intensity_first_term\": [\"FULL-TIME\", \"PART-TIME\"], # Example, but commented out.\n",
@@ -111,27 +118,25 @@
     "    (\"PART-TIME\", 1.0, \"year\"),\n",
     "]\n",
     "\n",
-    "\n",
-    "# TODO This code already works but this file/library needs to be updated in the repo: https://2415288190517010.0.gcp.databricks.com/editor/files/1043167876026327?o=2415288190517010\n",
-    "# df_inference = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_inference_dataset(\n",
-    "#     df_student_terms,\n",
-    "#     min_num_credits_checkin=min_num_credits_checkin,\n",
-    "#     min_num_credits_target=min_num_credits_target,\n",
-    "#     student_criteria=student_criteria,\n",
-    "#     intensity_time_limits=intensity_time_limits,\n",
-    "# )\n",
-    "\n",
-    "\n",
-    "# Temporary workaround: Create and drop the 'target' label due to library issue.\n",
-    "# This should be replaced with the updated library function once available.\n",
-    "df_processed = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_labeled_dataset(\n",
+    "df_processed = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_inference_dataset(\n",
     "    df_student_terms,\n",
     "    min_num_credits_checkin=min_num_credits_checkin,\n",
     "    min_num_credits_target=min_num_credits_target,\n",
     "    student_criteria=student_criteria,\n",
     "    intensity_time_limits=intensity_time_limits,\n",
     ")\n",
-    "df_processed.drop(\"target\", axis=1, inplace=True)  # Drop the temporary target column.\n",
+    "\n",
+    "\n",
+    "# # Temporary workaround: Create and drop the 'target' label due to library issue.\n",
+    "# # This should be replaced with the updated library function once available.\n",
+    "# df_processed = pdp.targets.failure_to_earn_enough_credits_in_time_from_enrollment.make_labeled_dataset(\n",
+    "#     df_student_terms,\n",
+    "#     min_num_credits_checkin=min_num_credits_checkin,\n",
+    "#     min_num_credits_target=min_num_credits_target,\n",
+    "#     student_criteria=student_criteria,\n",
+    "#     intensity_time_limits=intensity_time_limits,\n",
+    "# )\n",
+    "# df_processed.drop(\"target\", axis=1, inplace=True)  # Drop the temporary target column.\n",
     "\n",
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
@@ -141,7 +146,8 @@
     "    )\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
-    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")"
+    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")\n",
+    "     "
    ]
   }
  ],
