Changed the model's medallion level to gold

--- a/poc-pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
@@ -61,7 +61,7 @@
     "# write_schema = dbutils.jobs.taskValues.get(taskKey=\"data_ingestion\", key=\"write_schema\")  # From data ingestion task.\n",
     "read_schema = f\"{institution_id}_silver\"\n",
     "write_schema = f\"{institution_id}_silver\"\n",
-    "model_schema = f\"{institution_id}_bronze\"\n",
+    "model_schema = f\"{institution_id}_gold\"\n",
     "\n",
     "model_uri = f\"models:/{catalog}.{model_schema}.{model_name}/1\"  # Construct model URI.\n",
     "\n",
