--- a/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -15,8 +15,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "\"\"\"\n",
     "This script prepares data for inference in the Student Success Tool (SST) pipeline.\n",
     "\n",
@@ -47,7 +45,7 @@
     "try:\n",
     "    spark_session = DatabricksSession.builder.getOrCreate()\n",
     "except Exception:\n",
-    "    logging.warning('Unable to create Spark session; are you in a Databricks runtime?')\n",
+    "    logging.warning(\"Unable to create Spark session; are you in a Databricks runtime?\")\n",
     "    spark_session = None\n",
     "\n",
     "# Databricks workspace identifier\n",
@@ -83,7 +81,10 @@
     "\n",
     "\n",
     "# Reading the parameters from the institution's configuration file\n",
-    "cfg = configs.load_config(f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\", configs.PDPProjectConfigV2)\n",
+    "cfg = configs.load_config(\n",
+    "    f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/configuration_files/{institution_id}.toml\",\n",
+    "    configs.PDPProjectConfigV2,\n",
+    ")\n",
     "\n",
     "# Read preprocessing features\n",
     "min_passing_grade = cfg.preprocessing.features.min_passing_grade\n",
@@ -93,8 +94,8 @@
     "key_course_ids = cfg.preprocessing.features.key_course_ids\n",
     "\n",
     "# Read preprocessing target params\n",
-    "min_num_credits_checkin = cfg.preprocessing.target.params['min_num_credits_checkin']\n",
-    "min_num_credits_target = cfg.preprocessing.target.params['min_num_credits_target']\n",
+    "min_num_credits_checkin = cfg.preprocessing.target.params[\"min_num_credits_checkin\"]\n",
+    "min_num_credits_target = cfg.preprocessing.target.params[\"min_num_credits_target\"]\n",
     "\n",
     "# Create student-term dataset\n",
     "df_student_terms = pdp.dataops.make_student_term_dataset(\n",
@@ -146,8 +147,7 @@
     "    )\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
-    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")\n",
-    "     "
+    "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")"
    ]
   }
  ],
