--- a/poc-pipelines/tasks/sst_pdp_synthetic_data_generation/synthetic_data_generation_pipeline_task.ipynb
+++ b/poc-pipelines/tasks/sst_pdp_synthetic_data_generation/synthetic_data_generation_pipeline_task.ipynb
@@ -41,11 +41,15 @@
     "logging.getLogger(\"py4j\").setLevel(logging.WARNING)  # Ignore Databricks logger\n",
     "\n",
     "# Databricks workspace identifier\n",
-    "DB_workspace = dbutils.widgets.get(\"DB_workspace\") \n",
+    "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
     "\n",
     "# Input parameters from Databricks widgets\n",
     "institution_id = dbutils.widgets.get(\"institution_id\")\n",
-    "normalize_col_names = None if dbutils.widgets.get(\"normalize_col_names\") == \"\" else dbutils.widgets.get(\"normalize_col_names\")\n",
+    "normalize_col_names = (\n",
+    "    None\n",
+    "    if dbutils.widgets.get(\"normalize_col_names\") == \"\"\n",
+    "    else dbutils.widgets.get(\"normalize_col_names\")\n",
+    ")\n",
     "avg_num_courses_per_student = int(dbutils.widgets.get(\"avg_num_courses_per_student\"))\n",
     "num_students = int(dbutils.widgets.get(\"num_students\"))\n",
     "\n",
@@ -57,7 +61,6 @@
     "\n",
     "# Define the save directory, defaulting to a location within Unity Catalog volumes\n",
     "if dbutils.widgets.get(\"save_dir\") == \"\":\n",
-    "\n",
     "    bucket_name = f\"{DB_workspace}_{institution_id}_sst_application\"  # Bucket name based on institution ID\n",
     "else:\n",
     "    bucket_name = dbutils.widgets.get(\"save_dir\")\n",
@@ -66,7 +69,6 @@
     "logging.info(f\"normalize_col_names: {normalize_col_names}\")\n",
     "logging.info(f\"seed: {seed}\")\n",
     "logging.info(f\"num_students: {num_students}\")\n",
-    "\n",
     "\n",
     "\n",
     "# Initialize Faker with optional seed and custom providers\n",
@@ -91,12 +93,12 @@
     "\n",
     "# Generate course records (related to cohort records)\n",
     "course_records = [\n",
-    "    FAKER.raw_course_record(\n",
-    "        cohort_record, normalize_col_names=normalize_col_names\n",
-    "    )\n",
+    "    FAKER.raw_course_record(cohort_record, normalize_col_names=normalize_col_names)\n",
     "    for cohort_record in cohort_records\n",
     "    for _ in range(\n",
-    "        FAKER.randomize_nb_elements(avg_num_courses_per_student, min=1)  # Random number of courses per student\n",
+    "        FAKER.randomize_nb_elements(\n",
+    "            avg_num_courses_per_student, min=1\n",
+    "        )  # Random number of courses per student\n",
     "    )\n",
     "]\n",
     "\n",
@@ -111,22 +113,24 @@
     ")\n",
     "\n",
     "# Construct file names\n",
-    "cohort_file_name = f'{institution_id}_{sst_job_id}_STUDENT_SEMESTER_AR_DEIDENTIFIED.csv'\n",
-    "course_file_name = f'{institution_id}_{sst_job_id}_COURSE_LEVEL_AR_DEID.csv'\n",
+    "cohort_file_name = f\"{institution_id}_{sst_job_id}_STUDENT_SEMESTER_AR_DEIDENTIFIED.csv\"\n",
+    "course_file_name = f\"{institution_id}_{sst_job_id}_COURSE_LEVEL_AR_DEID.csv\"\n",
     "\n",
     "# Construct full paths within the GCS bucket\n",
-    "cohort_full_path_name = f'validated/{cohort_file_name}'\n",
-    "course_full_path_name = f'validated/{course_file_name}'\n",
+    "cohort_full_path_name = f\"validated/{cohort_file_name}\"\n",
+    "course_full_path_name = f\"validated/{course_file_name}\"\n",
     "\n",
     "# Create GCS blob objects\n",
     "cohort_blob = bucket.blob(cohort_full_path_name)\n",
     "course_blob = bucket.blob(course_full_path_name)\n",
     "\n",
     "# Upload DataFrames to GCS as CSVs\n",
-    "cohort_blob.upload_from_string(df_cohort.to_csv(header=True, index=False), 'text/csv')\n",
-    "course_blob.upload_from_string(df_course.to_csv(header=True, index=False), 'text/csv')\n",
+    "cohort_blob.upload_from_string(df_cohort.to_csv(header=True, index=False), \"text/csv\")\n",
+    "course_blob.upload_from_string(df_course.to_csv(header=True, index=False), \"text/csv\")\n",
     "\n",
-    "print(f\"Generated and uploaded files: {cohort_file_name} and {course_file_name} to GCS bucket: {bucket_name}\")\n",
+    "print(\n",
+    "    f\"Generated and uploaded files: {cohort_file_name} and {course_file_name} to GCS bucket: {bucket_name}\"\n",
+    ")\n",
     "\n",
     "# Set Databricks job task values for downstream tasks to access filenames\n",
     "dbutils.jobs.taskValues.set(key=\"cohort_file_name\", value=cohort_file_name)\n",
